style/style.sass
// colour scheme
$bg    : #d4d0c8; // grey, background for most UI widgets
$light : #ffffff; // white, top and left border of outset elements
$dark  : #888888; // dark grey, bottom and right border of outset elements
$selbg : #0a246a; // dark blue, selection background
$selfg : #ffffff; // white, selection foreground
$tip   : #ffffe1; // yellow, background for tooltips

// mixins
=bg     { background-color: $bg; }
=sel    { background: $selbg; color: $selfg; }
=inset  { border-color: $dark $light $light $dark; }
=outset { border-color: $light $dark $dark $light; }
=tt     { font-family: apl, monospace; font-size: 18px; } // typewriter text

@font-face // http://www.sitepoint.com/how-to-use-cross-browser-web-fonts-part-1/
  font-family: 'apl'
  src: url('apl385.eot')
  src: url('apl385.eot?#iefix') format('embedded-opentype'), url('apl385.woff') format('woff'), url('apl385.ttf') format('truetype'), url('apl385.svg#apl385') format('svg')

// general styles
::selection
  +sel
::-moz-selection // must be a separate rule from ::selection
  +sel
body
  +bg; padding: 0; margin: 0; font-family: sans-serif; 
input, textarea
  +tt
.text-field
  +inset; border-style: solid; border-width: 2px; outline: 0

// connect page
#fav-buttons { margin-bottom: 5px; } // "Connect", "New", and "Delete"
#fav-list
  +inset
  border-style: solid; border-width: 1px; background-color: white
  float: left; clear: both; width: 300px; height: 150px; overflow: auto; margin: 0 12px 0 0; outline: 0
#fav-host, #fav-port, #listen-port, #spawn-port, #fav-list
  +tt

// IDE page
//  ┌──────────────────────────────────────┐
//  │menu: File Edit etc                   │
//  ├──────────────────────────────────────┤
//  │language bar: ← +-×÷*⍟⌹○!? |⌈⌊⊥⊤⊣⊢ etc│
//  ├──────────────────────────┬───────────┤
//  │                          │(Tab)......│
//  │          session         │           │
//  │                          │           │
//  │                          │           │
//  ├──────────────────────────┤   editor  │
//  │(Tab)(Tab)................│           │
//  │                          │           │
//  │         debugger         │           │
//  └──────────────────────────┴───────────┘
.ide { position: absolute; top: 20px; bottom: 0; left: 0; right: 0; }

.menu
  +bg
  height: 40px; line-height: 17px; cursor: default; padding: 0; margin: 0; font-family: sans-serif
  a { text-decoration: none; color: black; cursor: default; outline: 0; }
  &>div
    +bg
    float: left
    &>a
      text-align: center; border: solid transparent 1px; padding: 0 5px; margin: 0
      &:hover
        +outset
    &.m-open
      &>div { display: block; }
      &>a
        +inset
  div div
    +bg
    +outset
    display: none; border-style: solid; border-width: 1px 2px 2px 1px
    position: absolute; z-index: 1; padding: 1px; margin: 2px 0 0 0
    min-width: 125px; max-width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis
    a
      height: 17px; line-height: 17px; text-align: left; padding: 1px 17px; overflow: hidden; display: block
      .shortcut { font-size: small; float: right; margin-left: 20px; color: #666; }
      &.checked { background: transparent 5px center no-repeat url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAMElEQVQI12NgwA3+M+KSYGBgYGCCMdAlYJLIAsgKGRmx6GRgYGBghBPoOnA6AhkAALZJCQIBbmPFAAAAAElFTkSuQmCC); }
      &:focus
        +sel
        .shortcut { color: #fff }
/* ... */

